--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
 # OS
 .DS_Store
 
@@ -33,3 +39,4 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.env
